// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawerItem should match snapshot 1`] = `
<View
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  testID="test-id"
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View
      style={
        Object {
          "flexDirection": "column",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "minHeight": 50,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "height": 50,
                "justifyContent": "center",
                "marginLeft": 5,
                "width": 45,
              },
              undefined,
            ]
          }
        >
          <Icon
            name="icon-name"
            style={
              Array [
                Object {
                  "color": "rgba(63,67,80,0.64)",
                  "fontSize": 24,
                },
                Object {
                  "color": "#d24b4e",
                },
              ]
            }
          />
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
              "paddingVertical": 14,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "rgba(63,67,80,0.5)",
                  "fontSize": 17,
                  "includeFontPadding": false,
                  "textAlignVertical": "center",
                },
                undefined,
                Object {
                  "color": "#d24b4e",
                },
                Object {
                  "textAlign": "center",
                  "textAlignVertical": "center",
                },
                false,
              ]
            }
          >
            default message
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "rgba(63,67,80,0.2)",
            "height": 1,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`DrawerItem should match snapshot without separator and centered false 1`] = `
<View
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  testID="test-id"
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View
      style={
        Object {
          "flexDirection": "column",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "minHeight": 50,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "height": 50,
                "justifyContent": "center",
                "marginLeft": 5,
                "width": 45,
              },
              undefined,
            ]
          }
        >
          <Icon
            name="icon-name"
            style={
              Array [
                Object {
                  "color": "rgba(63,67,80,0.64)",
                  "fontSize": 24,
                },
                Object {
                  "color": "#d24b4e",
                },
              ]
            }
          />
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
              "paddingVertical": 14,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "rgba(63,67,80,0.5)",
                  "fontSize": 17,
                  "includeFontPadding": false,
                  "textAlignVertical": "center",
                },
                undefined,
                Object {
                  "color": "#d24b4e",
                },
                Object {},
                false,
              ]
            }
          >
            default message
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
